# Networking

./: README.md
.zed/: settings.json
1/: CMakeLists.txt  Makefile  copy_file_contents.c  main.c  source.txt
1/.zed/: tasks.json
2/: CMakeLists.txt  client.c  main.c  server.c
2.1/: client.c  server.c
2.2/: go.mod
2.2/.zed/: tasks.json
2.2/cmd/client/: client.go
2.2/cmd/server/: server.go
2/.zed/: tasks.json
3/: client.c  logs.txt  server.c  test.txt  test_results.txt
3/.zed/: tasks.json
4/: CMakeLists.txt  server.c
